# sequential_relevant_cp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: advanced_usage.py  basic_usage.py
package_folder/: __init__.py  core.py
